View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0024239 | Open CASCADE | OCCT:Coding | public | 2013-10-08 13:21 | 2013-12-19 13:58 |
Reporter | Assigned To | bugmaster | |||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Platform | Linux | OS | Debian 4.0 | ||
Product Version | 6.6.0 | ||||
Target Version | 6.7.0 | Fixed in Version | 6.7.0 | ||
Summary | 0024239: Eliminate GCC compiler warning (multi-line comment) | ||||
Description | it is necessary to eliminate GCC compiler warning about multi-line comment. | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
I guess this issue has been resolved by fix pushed in branch CR24239 |
|
Reviewed, please test |
|
Dear BugMaster, Branch CR24239 (and products from GIT master) was compiled on Linux and Windows platforms and tested. SHA-1: be3f674d75bb00c6cb223eb0de5b871abb371457 Number of compiler warnings: occt component : Linux: 422 (424 on master) Windows: 9 (9 on master) products component : Linux: 190 (189 on master) Windows: 287 (287 on master) Regressions/Differences: http://occt-tests/CR24239-master-occt/Windows-32-VC9/bugs/fclasses/bug6143.html bugs fclasses(002) bug6143: FAILED http://jenkins-test-02.nnov.opencascade.com:8080/user/mnt/my-views/view/CR24239/job/mnt-CR24239-master_products_tests_windows_start/label=windows_test,tests_group=parasolid,tests_subgroup=003/2/HTML_Report/? parasolid doc_3(003) D8: FAILED - 3 differences with reference data found http://jenkins-test-02.nnov.opencascade.com:8080/user/mnt/my-views/view/CR24239/job/mnt-CR24239-master_products_tests_windows_start/label=windows_test,tests_group=sat,tests_subgroup=002/2/HTML_Report/? sat doc_2(002) D5: FAILED - 2 differences with reference data found Testing cases: Not needed Testing on Linux: Total MEMORY difference: 367145328 / 367276020 Total CPU difference: 42084.59000000098 / 44591.11000000126 Testing on Windows: Total MEMORY difference: 435300160 / 430021692 Total CPU difference: 37035.5625 / 41719.078125 There are following differences in images found by testdiff. http://occt-tests/CR24239-master-occt/Windows-32-VC9/diff-Windows-32-VC9.html IMAGE de step_1 ZU3: ZU3.png differs IMAGE bugs moddata_2 bug428: bug428_Driver1_Viewer1_View1.png differs IMAGE bugs moddata_2 bug42: bug428_Driver1_Viewer1_View1.png differs IMAGE bugs moddata_2 bug4: bug428_Driver1_Viewer1_View1.png differs IMAGE sewing tol_1 R2: R2.png differs IMAGE sewing tol_0_01 F8: F8.png differs |
|
Dear BugMaster, SSE2 instructions for OCCT building (issue 0024227) is reason of regressions in following test cases: bugs fclasses(002) bug6143: FAILED parasolid doc_3(003) D8: FAILED - 3 differences with reference data found sat doc_2(002) D5: FAILED - 2 differences with reference data found sat read_parallel(005) E9: FAILED - here is reading problem |
Date Modified | Username | Field | Change |
---|---|---|---|
2013-10-08 13:21 |
|
New Issue | |
2013-10-08 13:21 |
|
Assigned To | => ski |
2013-10-08 13:21 |
|
Status | new => assigned |
2013-10-09 18:06 |
|
Note Added: 0025995 | |
2013-10-09 18:06 |
|
Assigned To | ski => abv |
2013-10-09 18:06 |
|
Status | assigned => resolved |
2013-10-09 18:07 |
|
Note Added: 0025996 | |
2013-10-09 18:07 |
|
Assigned To | abv => bugmaster |
2013-10-09 18:07 |
|
Status | resolved => reviewed |
2013-10-09 18:09 | apn | Assigned To | bugmaster => apn |
2013-10-09 18:10 | apn | Note Edited: 0025995 | |
2013-10-10 10:22 |
|
Note Added: 0026007 | |
2013-10-10 10:22 |
|
Test case number | => Not needed |
2013-10-10 10:22 |
|
Assigned To | apn => abv |
2013-10-10 10:22 |
|
Status | reviewed => assigned |
2013-10-10 11:14 |
|
Assigned To | abv => bugmaster |
2013-10-10 11:14 |
|
Status | assigned => resolved |
2013-10-10 11:14 |
|
Status | resolved => reviewed |
2013-10-10 11:14 |
|
Status | reviewed => tested |
2013-10-10 11:27 |
|
Note Added: 0026019 | |
2013-10-10 12:46 | bugmaster | Target Version | => 6.7.0 |
2013-10-11 13:35 | bugmaster | Changeset attached | => occt master 012d92b6 |
2013-10-11 13:35 | bugmaster | Status | tested => verified |
2013-10-11 13:35 | bugmaster | Resolution | open => fixed |
2013-12-19 13:51 | bugmaster | Status | verified => closed |
2013-12-19 13:58 | bugmaster | Fixed in Version | => 6.7.0 |
2014-01-11 11:58 |
|
Category | OCCT Release:BUILD => OCCT:Coding |