0024239: Eliminate GCC compiler warning (multi-line comment)